--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   path_provider: ^2.1.3
   photo_view: ^0.15.0
   pin_code_fields: ^8.0.1
+  pinput: ^5.0.0
   provider: ^6.1.2
   scroll_to_index: ^3.0.1
   share_plus: ^9.0.0
