--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutter_restaurant",
-    "short_name": "flutter_restaurant",
+    "name": "Lamada",
+    "short_name": "Lamada",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
